--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@sentry/browser": "^5.27.3",
     "@steroidsjs/bootstrap": "^2.1.18",
-    "@steroidsjs/core": "^2.2.76",
+    "@steroidsjs/core": "^3.0.0-beta.2",
     "@steroidsjs/eslint-config": "^2.0.0-beta.4",
     "@steroidsjs/webpack": "^2.2.1",
     "@storybook/react": "~6.3.13",
-    "@types/react": "~17.0.1",
     "@types/webpack-env": "^1.15.1",
     "connected-react-router": "^6.9.1",
-    "eslint": "^7.2.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "typescript": "^4.2.4"
+    "react": "^18.1.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@steroidsjs/eslint-config": "^2.1.2",
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
+    "eslint": "^7.20.0",
+    "typescript": "4.2.2"
   }
 }
