Added navigation across demo files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
-  "compilerOptions": {
-    "jsx": "react",
-    "experimentalDecorators": true,
-    "esModuleInterop": true,
-    "baseUrl": "./src/",
-    "allowSyntheticDefaultImports": true
-  }
+    "compilerOptions": {
+        "jsx": "react",
+        "experimentalDecorators": true,
+        "esModuleInterop": true,
+        "baseUrl": "./src/",
+        "allowSyntheticDefaultImports": true,
+    },
+    "include": [
+        "src/**/*"
+    ],
 }
