--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
     "@storybook/react": "~6.3.13",
     "@types/webpack-env": "^1.15.1",
     "connected-react-router": "^6.9.1",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@steroidsjs/eslint-config": "^2.1.2",
-    "@types/react": "^18.0.20",
-    "@types/react-dom": "^18.0.6",
+    "@types/lodash": "^4.14.191",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "eslint": "^7.20.0",
     "typescript": "4.2.2"
   }
