--- a/package.json
+++ b/package.json
@@ -1,37 +1,35 @@
 {
-  "name": "steroids-site",
-  "description": "steroids-site",
-  "version": "1.0.0",
-  "main": "src/index.ts",
-  "license": "MIT",
-  "scripts": {
-    "watch": "node webpack",
-    "build": "node webpack production",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@sentry/browser": "^5.27.3",
-    "@steroidsjs/bootstrap": "^3.0 || >=3.0.0-beta.1",
-    "@steroidsjs/core": "^3.0.0-beta.2",
-    "@steroidsjs/webpack": "^3.0 || >=3.0.0-beta.1",
-    "@storybook/react": "~6.3.13",
-    "@types/webpack-env": "^1.15.1",
-    "connected-react-router": "^6.9.1",
-    "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-use": "^17.4.0"
-  },
-  "devDependencies": {
-    "@steroidsjs/eslint-config": "^2.1.2",
-    "@types/lodash": "^4.14.191",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "eslint": "^7.20.0",
-    "typescript": "4.2.2"
-  }
+    "name": "steroids-site",
+    "description": "steroids-site",
+    "version": "1.0.0",
+    "main": "src/index.ts",
+    "license": "MIT",
+    "scripts": {
+        "watch": "node webpack",
+        "build": "node webpack production",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.4",
+        "@sentry/browser": "^5.27.3",
+        "@steroidsjs/bootstrap": "^3.0 || >=3.0.0-beta.1",
+        "@steroidsjs/core": "^3.0.0-beta.2",
+        "@steroidsjs/webpack": "^3.0 || >=3.0.0-beta.1",
+        "@storybook/react": "~6.3.13",
+        "@types/webpack-env": "^1.15.1",
+        "connected-react-router": "^6.9.1",
+        "lodash": "^4.17.21",
+        "lodash-es": "^4.17.21",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@steroidsjs/eslint-config": "^2.1.2",
+        "@types/lodash": "^4.14.191",
+        "@types/react": "^18.0.27",
+        "@types/react-dom": "^18.0.10",
+        "eslint": "^7.20.0",
+        "typescript": "4.2.2"
+    }
 }
