--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "scripts": {
         "watch": "node webpack",
         "build": "node webpack production",
-        "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook"
+        "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
@@ -17,7 +16,6 @@
         "@steroidsjs/core": "^3.0.0-beta.2",
         "@steroidsjs/webpack": "^3.0 || >=3.0.0-beta.1",
         "@storybook/react": "~6.3.13",
-        "@types/webpack-env": "^1.15.1",
         "connected-react-router": "^6.9.1",
         "lodash": "^4.17.21",
         "lodash-es": "^4.17.21",
@@ -25,10 +23,13 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@steroidsjs/eslint-config": "^2.1.2",
+        "@steroidsjs/eslint-config": "^2.0.0-beta.4",
         "@types/lodash": "^4.14.191",
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
+        "@types/webpack-env": "^1.15.1",
+        "@typescript-eslint/eslint-plugin": "^5.51.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "eslint": "^7.20.0",
         "typescript": "4.2.2"
     }
