--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
         "@sentry/browser": "^5.27.3",
-        "@steroidsjs/bootstrap": "^3.0 || >=3.0.0-beta.3",
+        "@steroidsjs/bootstrap": "^3.0.0-beta.12",
         "@steroidsjs/core": "^3.0.0-beta.6",
         "@steroidsjs/webpack": "^3.0 || >=3.0.0-beta.1",
         "@storybook/react": "~6.3.13",
@@ -29,8 +29,8 @@
         "@types/react-dom": "^18.0.10",
         "@types/webpack-env": "^1.15.1",
         "@typescript-eslint/eslint-plugin": "^5.51.0",
-        "eslint-plugin-react-hooks": "^4.6.0",
         "eslint": "^7.20.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "typescript": "4.2.2"
     }
 }
