--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
         "@typescript-eslint/eslint-plugin": "^5.51.0",
         "eslint": "^7.20.0",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "typescript": "4.2.2"
+        "typescript": "^4.9.5"
     }
 }
