--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     },
     "dependencies": {
         "@sentry/browser": "^5.27.3",
-        "@steroidsjs/bootstrap": "^3.0.0-beta.50",
-        "@steroidsjs/core": "^3.0.0-beta.34",
+        "@steroidsjs/bootstrap": "^3.0.0-beta.54",
+        "@steroidsjs/core": "^3.0.0-beta.36",
         "@steroidsjs/webpack": "^3.0 || >=3.0.0-beta.1",
         "@storybook/react": "~6.3.13",
         "connected-react-router": "^6.9.1",
         "lodash": "^4.17.21",
         "lodash-es": "^4.17.21",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-use": "^17.4.0"
     },
     "devDependencies": {
         "@steroidsjs/eslint-config": "^2.1.4",
