--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@steroidsjs/webpack": "^3.0 || >=3.0.0-beta.1",
         "@storybook/react": "~6.3.13",
         "connected-react-router": "^6.9.1",
+        "gsap": "^3.11.5",
         "lodash": "^4.17.21",
         "lodash-es": "^4.17.21",
         "react": "^18.2.0",
