--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@sentry/browser": "^5.27.3",
+        "@splidejs/splide-extension-auto-scroll": "^0.5.3",
         "@steroidsjs/bootstrap": "^3.0.0-beta.73",
         "@steroidsjs/core": "^3.0.0-beta.52",
         "@steroidsjs/webpack": "^3.0 || >=3.0.0-beta.1",
