--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "dependencies": {
         "@sentry/browser": "^5.27.3",
+        "@splidejs/react-splide": "^0.7.12",
+        "@splidejs/splide": "^4.1.4",
         "@steroidsjs/bootstrap": "^3.0.0-beta.76",
         "@steroidsjs/core": "^3.0.0-beta.55",
         "@steroidsjs/webpack": "^3.0 || >=3.0.0-beta.1",
