--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "scripts": {
         "watch": "node webpack",
         "build": "node webpack production",
+        "server": "node public/server.js",
+        "build-ssr": "node webpack production ssr",
+        "ssr": "npm run build ssr && npm run server",
         "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src"
     },
     "dependencies": {
@@ -18,6 +21,7 @@
         "@steroidsjs/core": "^3.0.0-beta.69",
         "@steroidsjs/webpack": "^3.0 || >=3.0.0-beta.4",
         "@storybook/react": "~6.3.13",
+        "@steroidsjs/ssr": "^2.0.3",
         "axios": "^1.4.0",
         "connected-react-router": "^6.9.1",
         "gsap": "^3.12.2",
@@ -27,7 +31,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-syntax-highlighter": "^15.5.0",
-        "react-use": "^17.4.0"
+        "react-use": "^17.4.0",
+        "webpack-node-externals": "^3.0.0"
     },
     "devDependencies": {
         "@steroidsjs/eslint-config": "^2.1.4",
