--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
         "@splidejs/splide-extension-auto-scroll": "^0.5.3",
         "@steroidsjs/bootstrap": "^3.0.0-beta.87",
         "@steroidsjs/core": "^3.0.0-beta.69",
+        "@steroidsjs/ssr": "^2.0.3",
         "@steroidsjs/webpack": "^3.0 || >=3.0.0-beta.4",
         "@storybook/react": "~6.3.13",
-        "@steroidsjs/ssr": "^2.0.3",
-        "axios": "^1.4.0",
+        "axios": "^0.21.1",
         "connected-react-router": "^6.9.1",
         "gsap": "^3.12.2",
         "lodash": "^4.17.21",
         "lodash-es": "^4.17.21",
         "markdown-to-jsx": "^7.3.2",
         "react": "^18.2.0",
+        "react-day-picker": "^7.4.10",
         "react-dom": "^18.2.0",
         "react-syntax-highlighter": "^15.5.0",
         "react-use": "^17.4.0",
