--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,8 @@
 {
-  "extends": "@steroidsjs/eslint-config"
+  "extends": "@steroidsjs/eslint-config",
+  "rules": {
+    "import/order": [
+      "warn"
+    ]
+  }
 }
