--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,9 +87,9 @@ deploy_ssr_prod:
             --exclude='*'
             --delete
             $CI_PROJECT_DIR/ prod:$PROD_SSR_DEPLOY_DIR
-        # - ssh prod "
-        #     cd $PROD_SSR_DEPLOY_DIR
-        #     && rm -f $PROD_SSR_ROOT_DIR/current
-        #     && ln -sf $PROD_SSR_DEPLOY_DIR $PROD_SSR_ROOT_DIR/current
+        - ssh prod "
+            cd $PROD_SSR_DEPLOY_DIR
+            && rm -f $PROD_SSR_ROOT_DIR/current
+            && ln -sf $PROD_SSR_DEPLOY_DIR $PROD_SSR_ROOT_DIR/current"
         #     && sudo -i pm2 reload $PROD_SSR_PROCESS || exit 0"
 
