--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,6 +90,6 @@ deploy_ssr_prod:
         - ssh prod "
             cd $PROD_SSR_DEPLOY_DIR
             && rm -f $PROD_SSR_ROOT_DIR/current
-            && ln -sf $PROD_SSR_DEPLOY_DIR $PROD_SSR_ROOT_DIR/current"
+            && ln -sf $PROD_SSR_DEPLOY_DIR $PROD_SSR_ROOT_DIR/current
             && sudo -i pm2 reload $PROD_SSR_PROCESS || exit 0"
 
